<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_home"
            android:enabled="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="home"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_tabs"
            android:enabled="true"
            android:icon="@drawable/ic_widgets_black_24dp"
            android:title="tabs"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_profile"
            android:enabled="true"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="profile"
...
