<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".User.ModifyAccountActivity">
    <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:background="#CCFFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:translationZ="@dimen/activity_horizontal_margin"
            android:visibility="gone">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/redPrimary"/>

        <TextView
                android:id="@+id/pbText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/redPrimary"
                android:text="@string/upload_media_progress_bar"/>
    </LinearLayout>
    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusableInTouchMode="true"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                                android:id="@+id/profile_image"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:contentDescription="@string/image_profile_description"
                                android:src="@mipmap/ic_launcher"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="20dp"/>
                        <com.google.android.material.button.MaterialButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:text="@string/change_image_button"
                                style="?android:textAppearanceSmall"
                                android:textColor="#FFF"
                                android:id="@+id/change_image"
                                android:background="@color/redPrimary"
                                android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <EditText
                        android:id="@+id/txt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:padding="16dp"
                        android:layout_marginBottom="10dp"
                        android:maxLines="1"
                        android:singleLine="true"/>
                <EditText
                        android:id="@+id/txt_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname_hint"
                        android:padding="16dp"
                        android:layout_marginBottom="10dp"
                        android:maxLines="1"
                        android:singleLine="true"/>
                <EditText
                        android:id="@+id/txt_birthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_of_birth_hint"
                        android:padding="16dp"
                        android:layout_marginBottom="10dp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="date"/>
                <EditText
                        android:id="@+id/txt_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_hint"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:padding="16dp"
                        android:layout_marginBottom="10dp"/>
                <EditText
                        android:id="@+id/txt_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/country_hint"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:padding="16dp"
                        android:layout_marginBottom="10dp"/>
                <EditText
                        android:id="@+id/txt_profession"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profession_hint"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:padding="16dp"
                        android:layout_marginBottom="10dp"/>
                <Button
                        android:id="@+id/confirm_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/confirm_button"
                        android:textColor="#FFFFFF"
                        android:background="@color/redPrimary"
                        android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>